# Cpp_OpenGL_Game

./: .gitignore  CMakeLists.txt  README.md
include/engine/: Application.h  Engine.h  EventManager.h  Events.h  GLFWEvents.h  Initialization.h  Renderer.h  Window.h
include/game/: CameraController.h  Game.h
include/gameobjects/: Camera.h  Rectangle.h
include/gameobjects/singleobjects/: Triangular.h
include/graphics/: Batch.h  BatchColored.h  BatchTextured.h  FontRenderer.h  Mesh.h  MeshDynamic.h  MeshStatic.h  MeshStaticTextured.h  ModelLoader.h  Shader.h  Text.h  TextRenderer.h  Texture.h
include/utils/: Logger.h
res/shaders/: colored.frag  colored.vert  default.frag  default.vert  text.frag  textured.frag  textured.vert
src/: main.cpp
src/core/: Application.cpp  Application.h
src/engine/: Application.cpp  Engine.cpp  EventManager.cpp  Initialization.cpp  Renderer.cpp  Window.cpp
src/engine/core/: Engine.cpp  Engine.h  Initialization.cpp
src/engine/graphics/: MeshDynamic.cpp  MeshDynamic.h  MeshStatic.cpp  MeshStatic.h  Shader.cpp  Shader.h
src/engine/utils/: Logger.cpp  Logger.h
src/game/: Application.cpp  CameraController.cpp  Game.cpp
src/gameobjects/: Camera.cpp  Rectangle.cpp
src/gameobjects/singleobjects/: Triangular.cpp
src/graphics/: BatchColored.cpp  BatchTextured.cpp  FontRenderer.cpp  Mesh.cpp  Mesh.h  MeshDynamic.cpp  MeshStatic.cpp  MeshStaticTextured.cpp  ModelLoader.cpp  Shader.cpp  Shader.h  Text.cpp  TextRenderer.cpp
src/utils/: Logger.cpp  Logger.h
